@@ -1,5 +1,8 @@
 package com.dropchop.recyclone.quarkus.it.service.api;
 
+import com.dropchop.recyclone.mapper.api.FilteringDtoContext;
+import com.dropchop.recyclone.mapper.api.MappingContext;
+import com.dropchop.recyclone.mapper.jpa.security.DomainToDtoMapper;
 import com.dropchop.recyclone.model.api.base.Dto;
 import com.dropchop.recyclone.model.api.base.Entity;
 import com.dropchop.recyclone.model.api.base.Model;
@@ -11,20 +14,16 @@ import com.dropchop.recyclone.model.api.marker.state.HasCreated;
 import com.dropchop.recyclone.model.api.marker.state.HasModified;
 import com.dropchop.recyclone.model.api.rest.Constants;
 import com.dropchop.recyclone.model.dto.invoke.CodeParams;
-import com.dropchop.recyclone.model.dto.localization.TitleDescriptionTranslation;
 import com.dropchop.recyclone.model.dto.localization.TitleTranslation;
 import com.dropchop.recyclone.model.dto.rest.Result;
 import com.dropchop.recyclone.model.dto.security.Domain;
-import com.dropchop.recyclone.quarkus.it.model.dto.Node;
-import com.dropchop.recyclone.model.entity.jpa.localization.JpaTitleDescriptionTranslation;
+import com.dropchop.recyclone.model.entity.jpa.localization.JpaTitleTranslation;
 import com.dropchop.recyclone.model.entity.jpa.security.JpaAction;
 import com.dropchop.recyclone.model.entity.jpa.security.JpaDomain;
+import com.dropchop.recyclone.quarkus.it.mapper.jpa.NodeToDtoMapper;
+import com.dropchop.recyclone.quarkus.it.model.dto.Node;
 import com.dropchop.recyclone.quarkus.it.model.entity.jpa.JpaMiki;
 import com.dropchop.recyclone.quarkus.it.model.entity.jpa.JpaNode;
-import com.dropchop.recyclone.quarkus.it.mapper.jpa.NodeToDtoMapper;
-import com.dropchop.recyclone.mapper.api.FilteringDtoContext;
-import com.dropchop.recyclone.mapper.api.MappingContext;
-import com.dropchop.recyclone.mapper.jpa.security.DomainToDtoMapper;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
@@ -39,7 +38,7 @@ import static com.dropchop.recyclone.model.api.security.Constants.Permission;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * @author Nikola Ivačič <nikola.ivacic@dropchop.org> on 4. 05. 22.
+ * @author Nikola Ivačič <nikola.ivacic@dropchop.com> on 4. 05. 22.
  */
 @QuarkusTest
 class FilteringDtoContextTest {
@@ -66,13 +65,13 @@ class FilteringDtoContextTest {
       ((HasLanguageCode) model).setLang("en");
     }
     if (model instanceof HasTitleTranslation<?> && model instanceof Entity) {
-      Set<JpaTitleDescriptionTranslation> translations = new HashSet<>();
+      Set<JpaTitleTranslation> translations = new HashSet<>();
       for (int i = 0; i < numTranslations; i++) {
         if (numTranslations >= availableLangs.size()) {
           break;
         }
         String lang = availableLangs.get(i);
-        JpaTitleDescriptionTranslation titleTranslation = new JpaTitleDescriptionTranslation();
+        JpaTitleTranslation titleTranslation = new JpaTitleTranslation();
         titleTranslation.setTitle(title + " [" + lang + "]");
         titleTranslation.setLang(lang);
         titleTranslation.setCreated(ZonedDateTime.now());
@@ -80,22 +79,22 @@ class FilteringDtoContextTest {
         translations.add(titleTranslation);
       }
       //noinspection unchecked
-      ((HasTitleTranslation<JpaTitleDescriptionTranslation>) model).setTranslations(translations);
+      ((HasTitleTranslation<JpaTitleTranslation>) model).setTranslations(translations);
     }
     if (model instanceof HasTitleTranslation<?> && model instanceof Dto) {
-      Set<TitleDescriptionTranslation> translations = new HashSet<>();
+      Set<TitleTranslation> translations = new HashSet<>();
       for (int i = 0; i < numTranslations; i++) {
         if (numTranslations >= availableLangs.size()) {
           break;
         }
         String lang = availableLangs.get(i);
-        TitleDescriptionTranslation titleTranslation = new TitleDescriptionTranslation();
+        TitleTranslation titleTranslation = new TitleTranslation();
         titleTranslation.setTitle(title + " [" + lang + "]");
         titleTranslation.setLang(lang);
         translations.add(titleTranslation);
       }
       //noinspection unchecked
-      ((HasTitleTranslation<TitleDescriptionTranslation>) model).setTranslations(translations);
+      ((HasTitleTranslation<TitleTranslation>) model).setTranslations(translations);
     }
     if (model instanceof HasModified) {
       ((HasModified) model).setModified(ZonedDateTime.now());
@@ -187,7 +186,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -201,7 +200,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node.getCode());
     assertNull(node.getTitle());
     assertNull(node.getLang());
@@ -222,7 +221,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -236,7 +235,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
     assertNotNull(node.getTitle());
@@ -257,7 +256,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -271,7 +270,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
     assertNotNull(node.getTitle());
@@ -283,7 +282,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
     assertNotNull(node.getTitle());
@@ -304,7 +303,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNull(node.getLang());
@@ -327,7 +326,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getMiki());
@@ -340,7 +339,7 @@ class FilteringDtoContextTest {
     assertNull(node.getTranslations());
     assertNotNull(node.getChildren());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNull(node.getLang());
@@ -361,7 +360,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -383,7 +382,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -394,7 +393,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -416,7 +415,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -441,7 +440,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -455,7 +454,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -481,7 +480,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -494,7 +493,7 @@ class FilteringDtoContextTest {
     assertNotNull(translation.getTitle());
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNull(node.getLang());
@@ -516,7 +515,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -530,7 +529,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -544,7 +543,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNull(node.getLang());
@@ -566,7 +565,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -580,7 +579,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -602,7 +601,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -616,7 +615,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -629,7 +628,7 @@ class FilteringDtoContextTest {
     assertNotNull(translation.getTitle());
     assertNotNull(node.getChildren());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -651,7 +650,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -665,7 +664,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -690,7 +689,7 @@ class FilteringDtoContextTest {
     assertNotNull(result);
     assertEquals(2, result.size());
 
-    Node node = result.get(0);
+    Node node = result.getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -704,7 +703,7 @@ class FilteringDtoContextTest {
     assertNotNull(node.getChildren());
     assertEquals(2, node.getChildren().size());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
@@ -717,7 +716,7 @@ class FilteringDtoContextTest {
     assertNotNull(translation.getTitle());
     assertNotNull(node.getChildren());
 
-    node = node.getChildren().iterator().next();
+    node = node.getChildren().getFirst();
     assertNotNull(node);
     assertNotNull(node.getCode());
     assertNotNull(node.getLang());
